@@ -181,9 +181,9 @@
 
 
  <!-- CPS groups and global roles -->
- <widget name="cpsGroups" meta_type="MultiSelect Widget">
+ <widget name="groups" meta_type="MultiSelect Widget">
   <property name="fields">
-   <element value="cpsGroups"/>
+   <element value="groups"/>
   </property>
   <property name="label">label_groups</property>
   <property name="label_edit">label_groups</property>
@@ -194,9 +194,9 @@
   <property name="hidden_empty">True</property>
   <property name="vocabulary">groups</property>
  </widget>
- <widget name="cpsRoles" meta_type="Generic MultiSelect Widget">
+ <widget name="roles" meta_type="Generic MultiSelect Widget">
   <property name="fields">
-   <element value="cpsRoles"/>
+   <element value="roles"/>
   </property>
   <property name="label">label_roles</property>
   <property name="label_edit">label_roles</property>
@@ -230,10 +230,10 @@
    <cell name="email" ncols="2"/>
   </row>
   <row>
-   <cell name="cpsGroups" ncols="2"/>
+   <cell name="groups" ncols="2"/>
   </row>
   <row>
-   <cell name="cpsRoles" ncols="2"/>
+   <cell name="roles" ncols="2"/>
   </row>
   <row>
    <cell name="telephoneNumber" ncols="2"/>
