@@ -4,8 +4,8 @@
  <property name="users_dir">members</property>
  <property name="users_login_field">uid</property>
  <property name="users_password_field">userPassword</property>
- <property name="users_roles_field">cpsRoles</property>
- <property name="users_groups_field">cpsGroups</property>
+ <property name="users_roles_field">roles</property>
+ <property name="users_groups_field">groups</property>
  <property name="groups_dir">groups</property>
  <property name="roles_dir">roles</property>
  <property name="groups_members_field">members</property>
