@@ -6,6 +6,11 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- Removed redundant read_process_expr and write_process_expr in the members_ldap
+  schema.
+- Renamed cpsGroups and cpsRoles fields and widgets into groups and roles,
+  to have something consistent with the CPSDefault corresponding profiles in the
+  ZODB.
 - More work on the classical profile.
 - Made the language translations more consistent regarding the User ID.
 New internal features
